--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ ul a{
 } 
 .logo{ 
 
- background-image: url("Photo/amazon_logo.png");  
+ background-image: url("./Photo/amazon_logo.png");  
     background-size: cover;
     height:50px;
     width:100px;
